# midi-monitor

./: .gitignore  .gitmodules  CMakeLists.txt  MidiMonitor.jucer  README.md  azure-pipelines.yml
Builds/LinuxMakefile/: Makefile
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: MainPanel.cpp  MainPanel.h  MidiMessageDescription.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: release-notes.sh
